# probedge

./: .env.example  .gitignore  README.md  README_PRODUCTION_CUTOVER.md  live_state.json  pyproject.toml
apps.bak.20251112-205018/api/: main.py  main.py.conflicted
apps/api/: main.py
apps/infra/: settings.py
apps/ops/: backfill_backtest_tm5.py
apps/research/: analysis10_walkforward_stability.py  analysis9_feature_attribution.py  gates_backtest.py  gates_backtest_C.py  gates_backtest_D.py
apps/runtime/: build_tokens_5min.py  colab_prepare_10_universe.py  compare_colab_parity_10.py  daily_timeline.py  data_qc.py  fills_to_daily.py  intraday_paper.py  kite_auth_cli.py  kite_hist_1m_fetch.py  minute_to_tm5.py  normalize_intraday_5min_files.py  paper_exec_from_journal.py  playback_tm5_console.py  run_phase_a.py  (+11 more)
config/: frequency.yaml  frequency.yaml.conflicted  symbol_map.json  symbol_map.yaml
data/: tokens.csv
docs/: README_BATCH_AGENT.md  README_FIXED_APPS.md  README_alignment.md
infra/: atomic.py
ops/: add_date_to_intraday.py  backfill_intraday_kite.py  debug_tags_and_plan.py  get_access_token.py  kite_auth_local.py  kite_auth_manual.py  kite_auth_server.py  rebuild_master_recent.py  refresh_today_tags.py
probedge/: __init__.py  ops_get_kite_token.py  ops_kite_auth_cli.py
probedge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: inspect_data.py  leakage_audit.py  link_data.sh  probedge_day.sh  probedge_eod.sh  probedge_hard_stop.sh  probedge_stop.sh  sanity_check.py
tests/: smoke_tests.py
webui/: live.html  login.html
(+280 files in other folders)
